export enum DiscountType {
  PERCENTAGE = "PERCENTAGE",
  FIXED = "FIXED"
}
