export enum FacilityType {
  TENIS = "tenis",
  FUTBOL = "fútbol",
  GIMNASIO = "gimnasio"
}

