export enum UserRole {
  PLAYER = "player",
  CENTER_ADMIN = "center_admin",
  COACH = "coach",
  REFEREE = "referee",
  ADMIN = "admin"
}

